# fleet-mcp

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  claims.jsonl  evidence.jsonl  final.md  plan.md  sources.jsonl  spec.md  test.md  todos.md  updates.md
.github/workflows/: ci.yml  release.yml
examples/: claude-desktop-config.json
scripts/: install_mcp.py
src/: config.rs  handler.rs  main.rs
src/fleet/: client.rs  types.rs
