[package]
name = "fleet-mcp"
version = "0.1.1"
edition = "2024"
description = "A Rust MCP server for Fleet Device Management (FleetDM)"
authors = ["Fleet MCP Contributors"]
license = "MIT"
repository = "https://github.com/stevenke1981/fleet-mcp"
rust-version = "1.85"
readme = "README.md"
keywords = ["mcp", "fleetdm", "device-management", "osquery", "model-context-protocol"]
categories = ["development-tools", "api-bindings"]
include = ["/src/**", "/examples/**", "/scripts/**", "/Cargo.toml", "/Cargo.lock", "/README.md", "/LICENSE"]

[dependencies]
# MCP SDK (official Rust SDK for Model Context Protocol)
rmcp = { version = "0.16", features = ["server", "macros", "transport-io", "schemars"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Schema generation (for MCP tool input schemas via #[derive(JsonSchema)])
schemars = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = []
